--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
-terraform\lambda_function2.zip
-terraform\lambda_function1.zip
-terraform\terraform.tfstate
-terraform\.terraform.lock.hcl
-terraform\.terraform
+terraform/terraform.tfstate
+terraform/.terraform
+terraform/lambda_function2.zip
+terraform/lambda_function1.zip
+terraform/.terraform.lock.hcl
+.gitignore
+terraform/terraform.tfstate.backup
